2007-03-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	No data being received should be an info message.

2007-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/eaters.glade:
	  Only show disconts for timestamp/offset if there were any.

2007-03-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* doc/random/synchronization:
	Add some blurb about timestamps, offsets and a couple of producers.

2007-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/redhat/flumotion:
	  Pass status arguments through too.

2007-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py:
	  A .pid file could be empty or contain garbage.  Clean it up in
	  that case.

2007-03-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* doc/random/synchronization:
	Update doc for renaming of components.
	Fix spelling mistake.

2007-03-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Output a warning when we get an EOS message from something
	other than an eater.  Should only happen on producer components
	that only run for a finite time, such as dvb with a file.

2007-03-15  Michael Smith  <msmith@fluendo.com>

	* tests/integration/common.py:
	* tests/integration/test_qa.py:
	* tests/integration/test_torture.py:
	  Integration tests have been failing for months, yay.
	  Fix up for yet-more-incomplete-parts of The Great Renaming.

2007-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/base/eaters.glade:
	  Clean up UI for eaters so all settable labels are aligned

2007-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent.py:
	  A lack of space after gdpdepay caused audio-encoder and video-overlay
	  to go hungry then lost (but sad internally).  Fix the space.
